# libarke

./: CMakeLists.txt  README.md
include/: arke-avr.h  arke-c.h  arke.h
include/arke-avr/: systime.h
specs/: specs.md
src-avr/: Systime.c  Systime.h  arke-src-all.c  arke.c  config.h
src-c/: CMakeLists.txt  arke-private-conversion-test.cpp  arke-private-conversion.h  arke-src-all.c  arke.c  main-check.cpp
src-go/arke/: COPYING  can_interface_name.go  celaeno.go  celaeno_test.go  class.go  class_test.go  conversion.go  conversion_test.go  fan_status.go  fan_status_test.go  format_test.go  go.mod  go.sum  helios.go  helios_test.go  messages.go  messages_test.go  network_command.go  notus.go  notus_test.go  pd_config.go  pid_config.go  zeus.go  zeus_test.go
src-go/arke/cmd/arkedump/: main.go
src-go/arke/cmd/arkesend/: .gitignore  celaeno.go  completions.go  get.go  helios.go  main.go  network_commands.go  notus.go  zeus.go
src-go/pkg/arke/: class.go  class_test.go  go.mod  helios.go  messages.go  zeus_test.go
